Spacing fix for captions

--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -30,7 +30,6 @@
   }
 
   .row {
-    width: 100%;
     display: flex;
     gap: 1rem;
     flex-direction: row;
